# teensy_poi

./: .gitignore  CMakeLists.txt  Makefile  statistics.txt  teensy_poi.cbp
cmake/: toolchain.TeensyLC.cmake
cmake/Platform/: TeensyLC.cmake
core/: mkl26z64.ld  nonstd.c  teensy.c  teensy.h  tstdlib.c  tstdlib.h  usb_desc.c  usb_desc.h  usb_dev.c  usb_dev.h  usb_mem.c  usb_serial.c  usb_serial.h
core/libcpp/: function.hpp  modulo_counter.hpp  numeric.hpp  polymorphic_ptr.hpp  sample_buffer.hpp  type_traits.hpp  value_table.hpp  variant.hpp
core/tlibcpp/: debounce.hpp  null_pin.hpp  nvic.hpp  periodic.hpp  pin.hpp  pingroup.hpp  ports.hpp  teensy_pins.hpp
core/util/: atomic.h
libs/Analog/: Analog.h
libs/DMAChannel/: DMAChannel.cpp  DMAChannel.h
libs/DmaSpi/: DmaSpi.h
libs/I2C/: I2C.cpp  I2C.h
libs/I2Cdev/: I2Cdev.h
libs/MPU6050/: MPU6050.h  MPU6050_6Axis_MotionApps20.h  MPU6050_dmp41.cpp  MPU6050_dmp41_impl.h  MPU6050_impl.h
libs/SPI/: SPI.h
libs/SPIFlash/: SPIFlash.h
libs/Snooze/: Snooze.cpp  Snooze.h  cmp.h  cpu.h  digital.h  llwu.h  lptmr.h  mcg.c  mcg.h  peripheral.h  tsi.h  util.h
src/: button.hpp  colorwheel.hpp  config.hpp  debug.hpp  flash.hpp  gamma_table.hpp  io_service.hpp  led_algorithm.hpp  leds.hpp  manager.hpp  maths.hpp  mode_off.hpp  mode_play.hpp  mode_program.hpp  motion.hpp  power.hpp  protocol.hpp  random.c  random.h  selftest.hpp  status.hpp  stopwatch.hpp  teensy_poi.cpp  usb_serial.hpp
